kube/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vytrvalec-nginx
spec:
  selector:
    matchLabels:
      app: vytrvalec-nginx
  template:
    metadata:
      labels:
        app: vytrvalec-nginx
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}

        - name: nginx-config-volume
          configMap:
            name: nginx-config

      imagePullSecrets:
        - name: server-deploy-token

      containers:
      - name: vytrvalec-nginx
        imagePullPolicy: IfNotPresent
        image: nginx:1.25.4-alpine
        ports:
          - containerPort: 80

        volumeMounts:
          - name: shared-files
            mountPath: /var/www/vytrvalec

          - name: nginx-config-volume
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf

      - name: vytrvalec-web
        # TODO: tady zmenit image na url
        imagePullPolicy: Always
        image: ipmil.civ.zcu.cz:4567/kiv/vytrvalec-server/app:${CI_COMMIT_SHORT_SHA}
        volumeMounts:
          - name: shared-files
            mountPath: /var/www/vytrvalec
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp -r /app/. /var/www/vytrvalec && chown -R www-data:www-data /var/www/vytrvalec"]
---
apiVersion: v1
kind: Service
metadata:
  name: vytrvalec-nginx
spec:
  selector:
    app: vytrvalec-nginx
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
