kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vytrvalec-uts
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.org/server-snippets: |
      location / {
          return 404;
      }
spec:
  tls:
    - hosts:
        - vytrvalec.uts.zcu.cz
      secretName: vytrvalec-uts-tls
  defaultBackend:
    service:
      name: vytrvalec-nginx
      port:
        number: 80
  rules:
    - host: vytrvalec.uts.zcu.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vytrvalec-nginx
                port:
                  number: 80
